# augre

./: .gitignore  Cargo.toml  README.md  compose.yaml  config.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: build.yml
src/: main.rs
src/base/: config.rs  mod.rs  types.rs
src/services/: cria.rs  docker.rs  git.rs  gpt.rs  mod.rs  model.rs
