[package]
name = "augre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
config = { version = "0.13.3" }
chatgpt_rs = "1.2.3"
anyhow = "1.0.75"
termimad = "0.25.2"
yansi = "0.5.1"
dialoguer = "0.10.4"
serde = "1.0.188"